<resources>
    <string name="app_name">tanmen</string>
    <string name="title_home">Home</string>
    <string name="title_shuffle">shuffle</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">検索</string>
    <string name="search_button">現在地から検索</string>
    <string name="distance">距離</string>
    <string name="cancel">キャンセル</string>
    <string name="five_hundred_meters">500m</string>
    <string name="one_thousand_meters">1000m</string>
    <string name="two_thousand_meters">2000m</string>
</resources>